--- a/README.html
+++ b/README.html
@@ -3,6 +3,6 @@
 <a href="trust://trust.com:75235">Launch Application</a>
 
 <a href="trust://trust.com">Launch Application</a>
-<a href="trust://www.trust.com">Launch Application</a>
+<link href="trust://www.trust.com">Launch Application</link>
 
 <a href="https://dvlp5riaeil69.cloudfront.net">Launch Application</a>
